# diardash

./: Cargo.toml  dashboard.md  dotenv
scripts/: ad-stats.ps1
src/: lib.rs  main.rs  models.rs  routes.rs  schema.rs  weather_payload.rs
src/mocks/: ad.rs  atera.rs  backup.rs  mod.rs  ncentral.rs  veeam.rs  vipre.rs  wazuh.rs  weather.rs
src/services/: ad.rs  atera.rs  cove.authorization.md  cove.enumerating-device-statistics.md  cove.enumerating-devices.md  cove.rs  cove.status-codes.md  mod.rs  ncentral.rs  openweather.rs
templates/: index.html.tera
