[package]
name = "diardash"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
diesel = { version = "2.2", features = ["sqlite", "chrono"] }
dotenvy = "0.15"
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rocket = { version = "0.5", features = ["json"] }
rocket_dyn_templates = { version = "0.2", features = ["tera"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
